# ha-smart-climate

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
custom_components/smart_climate/: __init__.py  config_flow.py  const.py  coordinator.py  dumb.py  engine.py  entity.py  manifest.json  models.py  number.py  select.py  sensor.py  strings.json  switch.py
custom_components/smart_climate/translations/: en.json  ru.json
docs/: lovelace_modern_widgets.yaml  lovelace_smart_climate_dashboard.yaml
tests/: test_coordinator_deactivation.py  test_dumb_devices.py  test_engine.py  test_integration_regressions.py  test_scenarios.py
