[project]
name = "smart-climate-ha"
version = "0.1.15"
description = "Home Assistant custom integration smart_climate"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.11.0"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
